--- a/memory-pwa/public/manifest.json
+++ b/memory-pwa/public/manifest.json
@@ -3,6 +3,12 @@
   "name": "Create React App Sample",
   "icons": [
     {
+      "src": "maskable.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
@@ -10,7 +16,7 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192" 
     },
     {
       "src": "logo512.png",
